--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
 
             <label for="store">Store Name:</label>
             <select id="store" name="store">
-                <option value="A">A</option>
-                <option value="B">B</option>
-                <option value="C">C</option>
+                <option value="A1">A1</option>
+                <option value="B2">B2</option>
+                <option value="C3">C3</option>
                 <!-- Add more options as needed -->
             </select>
 
