--- a/index.html
+++ b/index.html
@@ -62,6 +62,9 @@
             <input type="number" id="income" name="income" value="">
             <button type="submit">Add Item</button>
         </form>
+
+                <!-- 新增一個容器來顯示儲存的資料 -->
+                <div id="saved-data-container"></div>
     </main>
 
     <footer>
