--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
                 <option value="重慶-21">重慶-21</option>
                 <option value="重慶-23">重慶-23</option>
                 <option value="重慶-25">重慶-25</option>
+                <option value="重慶-27">重慶-27</option>
                 <option value="永和-24">永和-24</option>
                 <option value="永和-25">永和-25</option>
                 <option value="三重-1">三重-1</option>
