add buy and play

--- a/index.html
+++ b/index.html
@@ -72,6 +72,8 @@
                 <option value="三重-23">三重-23</option>
                 <option value="三重-24">三重-24</option>
                 <option value="三重-25">三重-25</option>
+                <option value="buy">buy</option>
+                <option value="play">play</option>
             </select>
 
             <label for="income">Income:</label>
